@@ -1,6 +1,7 @@
 master
 ahodesuka:
 	-Relative post dates
+	-Exporting/importing settings
 
 1.0.6
 seaweedchan:
